product condifitional filtering end point
